<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        tools:text="Parabéns!" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile_is"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        tools:src="@drawable/ic_profile_moderate"
        android:contentDescription="@string/profile_icon"/>

    <TextView
        android:id="@+id/profileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textStyle="bold"
        tools:text="Moderado" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        tools:text="Você busca um equilíbrio entre segurança e rentabilidade." />

    <Button
        android:id="@+id/learnMoreButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/learn_more" />

    <ImageButton
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/restart_quiz"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_restart" />

</LinearLayout>